--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -68,6 +68,10 @@
   background-color: $instagram;
 }
 
+.telegram i {
+  background-color: $telegram;
+}
+
 /* Hover Transition */
 .twitter i:hover,
 .google i:hover,
@@ -78,7 +82,8 @@
 .instagram i:hover,
 .stack-overflow i:hover,
 .kaggle i:hover,
-.medium i:hover {
+.medium i:hover,
+.telegram i:hover {
   background-color: $textColor;
 }
 
