Fix ugly mobile version

--- a/src/components/achievementCard/AchievementCard.scss
+++ b/src/components/achievementCard/AchievementCard.scss
@@ -1,9 +1,8 @@
 @import "../../_globalColor";
 
-.card-image {
-  max-width: 100%;
-  height: auto;
-  width: 250px;
+.card-image > img {
+  max-height: 30vh;
+  width: 100%;
 }
 .card-title {
   color: $titleColor;
@@ -38,7 +37,8 @@
 }
 .certificate-image-div {
   position: relative;
-  height: 250px;
+  max-height: 250px;
+  width: 100%;
   overflow: hidden;
   display: flex;
   justify-content: center;
