--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -159,7 +159,7 @@
 
 /* 48em = 768px */
 
-@media (min-width: 48em) {
+@media (min-width: 65em) {
   .header li {
     float: left;
   }
@@ -175,8 +175,13 @@
     display: none;
   }
 }
-@media (max-width: 960px) and (min-width: 768px) {
+@media (max-width: 1160px) {
   .header {
-    font-size: 12px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 430px) {
+  .logo-name {
+    display: none;
   }
 }
